hphp/test/slow/exceptions/unwind_fcallarray.php.expectf
Fatal error: Uncaught exception 'Exception' with message 'die rebel scum' in %s/unwind_fcallarray.php:4
Stack trace:
#0 %s/unwind_fcallarray.php(11): handle_error()
#1 %s/unwind_fcallarray.php(14): main()
#2 {main}
